<resources>
    <string name="app_name">FoodRunner</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up_now"><u>Don\'t have an account? sign up now</u></string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="isLoggedIn">isLoggedIn</string>
    <string name="loginPreferences">Login Preferences</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile \nnumber and email below:</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="name_min_3_characters">Name (Min. 3 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="soumadip_dey">Soumadip Dey</string>
    <string name="soumadip_dey">Soumadip Dey</string>
    <string name="_91_8768454982">+91-8768454982</string>
</resources>