<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home_menu_icon"
            android:title="@string/home" />

        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/profile_menu_icon"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/favoriteRestaurants"
            android:icon="@drawable/favorite_menu_icon"
            android:title="@string/favorite_restaurants" />

        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/order_history_menu_icon"
            android:title="@string/order_history" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/faq_menu_icon"
            android:title="@string/faqs" />

        <item
            android:id="@+id/logOut"
            android:icon="@drawable/log_out_menu_icon"
            android:title="@string/log_out" />
    </group>
</menu>