<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:src="@drawable/food_runner_icon" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/phone_icon"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="number"
        android:minHeight="50dp"
        android:padding="5dp"
        android:maxLength="10"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/lock_icon"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:minHeight="50dp"
        android:padding="5dp"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:padding="5dp"
        android:text="@string/login"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="#E62721" />

    <TextView
        android:id="@+id/tvForgotPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:onClick="startForgetPasswordActivity"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/sign_up_now"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>