<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imgFoodRunnerLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/food_runner_icon"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tvForgotPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgFoodRunnerLogo"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:lines="2"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvForgotPasswordLabel"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="number"
        android:minHeight="50dp"
        android:padding="5dp"
        android:maxLength="10"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:padding="5dp"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailAddress"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:padding="5dp"
        android:text="@string/next"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="#E62721" />

</RelativeLayout>